frontend/tests/cases/negative/leak.gr
import Bool

leak : Bool |Private| -> Bool |Public|
leak |x| = |x|
