frontend/tests/cases/negative/leak.gr.output
Type checking failed: 
Grading error: frontend/tests/cases/negative/leak.gr:4:1:
Private value cannot be moved to level Public